--- a/meetup/2015-06-08/surveil/index.html
+++ b/meetup/2015-06-08/surveil/index.html
@@ -166,6 +166,17 @@
 				</section>
 
 				<section>
+					<h1>ROADMAP</h1>
+					<ul>
+						<li>Authentication multi backend</li>
+						<li>Isolation des utilisateurs en royaumes</li>
+						<li>Packaging rpm/deb</li>
+						<li>Optimisation de la propagation de la configuration</li>
+						<li>Interface web: Configuration</li>
+					</ul>
+				</section>
+
+				<section>
 					<h1>Suivez-nous</h1>
 					<ul>
 						<li><a href="https://github.com/stackforge/surveil">github.com/stackforge/surveil</a></li>
